ignore ds store and modified import code

--- a/FIMA/FIMA_analysis.ipynb
+++ b/FIMA/FIMA_analysis.ipynb
@@ -14,7 +14,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "import geopandas"
@@ -453,9 +452,22 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"FimaNfipClaimsV1.csv\")\n",
+    "df1 = pd.read_csv(\"FimaNfipClaimsV1_1.csv\")\n",
+    "df2 = pd.read_csv(\"FimaNfipClaimsV1_2.csv\")\n",
+    "df3 = pd.read_csv(\"FimaNfipClaimsV1_3.csv\")\n",
     "\n",
-    "df"
+    "df = pd.concat([df1, df2, df3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_df = geopandas.GeoDataFrame(df)\n",
+    "\n",
+    "geo_df"
    ]
   },
   {
@@ -1346,11 +1358,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df2 = geopandas.read_file(\"FimaNfipClaimsV1.csv\")\n",
-    "\n",
-    "df2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
